# zzignal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml
examples/: option_pricing.rs
python_tests/: test_synthetic.py
src/: lib.rs
src/core/: linalg.rs  mod.rs  stats.rs
src/montecarlo/: engine.rs  mod.rs  option_pricer.rs  path.rs  timer.rs
src/options/: greeks.rs  mod.rs  payoff.rs  pricing.rs
src/stochastic/: brownian.rs  heston.rs  localvol.rs  mod.rs
src/synthetic/: etf_intraday.rs  generate_spy_year.rs  mod.rs  options_0dte.rs  save_csv.rs
src/utils/: mod.rs  parallel.rs  timing.rs
src/volatility/: mod.rs  smile.rs  surface.rs
